pocs/hello-deploy-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-svc
  labels:
    app: hello-world
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-name: lb-svc
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-0ee18f52b4f2a75f4, subnet-0880cc3d78939fe04, subnet-03307a01716b9ba07
    service.beta.kubernetes.io/load-balancer-source-ranges: 10.0.0.0/8
    external-dns.alpha.kubernetes.io/hostname: hello-app.core.iugu
spec:
  type: LoadBalancer
  loadBalancerClass: service.k8s.aws/nlb
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: hello-world
