pocs/hello-deploy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  labels:
    app: hello-world
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hello-service.core.iugu
    cert-manager.io/issuer: iugu-cluster-pca
    cert-manager.io/issuer-kind: AWSPCAClusterIssuer
    cert-manager.io/issuer-group: awspca.cert-manager.io
    cert-manager.io/common-name: core.iugu
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - hello-service.core.iugu
      secretName: hello-service-tls
  rules:
    - host: hello-service.core.iugu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 80
